Used bean validation. Removed two general rules and replaced them with bean validation rules.